<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/home"
        android:title="@string/home_menu" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_favorite_24"
        android:id="@+id/favourites"
        android:title="@string/favourites_menu" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_24"
        android:id="@+id/add"
        android:title="@string/add_menu" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_search_24"
        android:id="@+id/search"
        android:title="@string/settings_menu" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_24"
        android:id="@+id/profile"
        android:title="@string/profile_menu" />
</menu>