<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#201E28"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fdfdfd"
        android:fontFamily="@font/gilroy_extrabold"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/create_an_account" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789_ABCDEFGHIJKLMNOPQRTSUVWXYZ"
        android:fontFamily="@font/gilroy_light"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_login" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/gilroy_light"
        android:inputType="textEmailAddress"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789_ABCDEFGHIJKLMNOPQRTSUVWXYZ"
        android:inputType="textPassword"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy_light"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_password" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:backgroundTint="#8E0303"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/link_to_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_extrabold"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/login"
        android:textColor="#fdfdfd"
        android:textSize="17sp" />

</LinearLayout>