<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern_design_food80"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Используем LinearLayout для вертикального расположения элементов -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Menu TextView -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_extrabold"
            android:textSize="32sp"
            android:layout_gravity="center"/>

        <!-- New for you TextView -->

        <!-- Targets RecyclerView -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:fontFamily="@font/gilroy_extrabold"
            android:text="@string/new_for_you"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/targetsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="horizontal" />

        <!-- Categories TextView -->
        <TextView
            android:id="@+id/todayMenuTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/gilroy_extrabold"
            android:text="@string/what_s_on_menu_today"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <!-- Categories RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todaysList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="horizontal"/>
        <TextView
            android:id="@+id/categoryTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/gilroy_extrabold"
            android:text="@string/categories"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:nestedScrollingEnabled="false"
            android:layout_marginStart="5dp"
            app:spanCount="2"
            android:scrollbars="horizontal"/>

    </LinearLayout>

</ScrollView>